fix variable name